2004-03-21  Christian Schaller <Uraeus@gnome.org>

	* Some small changes to Nuvola to make it more 2.6 friendly
	* New Amaranth trashcan from Yishay Vadai

2004-03-06  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
 
2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-02-27  Remi Cohen-Scali  <rcoscali@cvs.gnome.org>

	* configure.in: Added an 's' to GETTEXT_PACKAGE
	in order to obtain gnome-themes-extras (instead
	of gnome-themes-extra). 
	fix Bug# 135563

2004-02-09  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-03  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" (Lithuanian) to ALL_LINGUAS.

2004-01-29  Christian Schaller <Uraeus@gnome.org>

	* Updated smooth to compile with Gtk2.3
	* New improved Wasp logout icon

2004-01-11  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2004-11-01 Christian Schaller <Uraeus@gnome.org>

	* Change Amaranth Floppy and cdrom icons
	* Add new webbrowser icon to Wasp
	* Add new desktop emblem to Wasp

2004-11-01 Christian Schaller <Uraeus@gnome.org>

	* Updated Lush/Galaxy theme to latest version
	* New Wasp theme without pixmaps
	* Adding gaim Wasp icons
	* Fixed bug 116180 	 (gorilla iconrc)
	* Fixed bug 109746 (Galaxy metacity bug)
	* Fixed bug 130176 (Missing Amaranth icons)
	* Fixed bug 130301 (Bad symlinks)
	* Make 0.6 release

2003-12-16 Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Added Slovak translation.

2003-12-14 Christian Schaller <Uraeus@gnome.org>

	* Amaranth fix from Andrew Johnson

2003-12-07 Christian Schaller <Uraeus@gnome.org>

 	* Added goto first and last to Nuvola
	* Added gaim send-message icon to Gaim

2003-12-06 Christian Schaller <Uraeus@gnome.org>
 
	* Made 0.5 release

2003-12-05 Christian Schaller <Uraeus@gnome.org>
